--- a/index_Version2.html
+++ b/index_Version2.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <div class="container">
-      <img src="profile.jpg" alt="Profile Photo" class="profile-img">
+      <img src="self.jpg" alt="Profile Photo" class="profile-img">
       <h1>Amrendra Pandey</h1>
       <p class="title">[Your Professional Title]</p>
       <div class="social-links">
