--- a/index.html
+++ b/index.html
@@ -83,5 +83,15 @@
       &copy; 2025 Amrendra Pandey
     </div>
   </footer>
+  <!-- 3D Card Effect JS -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.7.0/vanilla-tilt.min.js"></script>
+  <script>
+    VanillaTilt.init(document.querySelectorAll(".card, .profile-img"), {
+      max: 15,
+      speed: 400,
+      glare: true,
+      "max-glare": 0.18,
+    });
+  </script>
 </body>
 </html>
