--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
     </section>
     <section class="card contact reveal">
       <h2><i class="fas fa-envelope"></i> Contact</h2>
-      <form action="mailto:your.email@example.com" method="POST" enctype="text/plain" class="contact-form">
+      <form action="mailto:amrendra.pandey2522@gmail.com" method="POST" enctype="text/plain" class="contact-form">
         <input type="text" name="name" placeholder="Your Name" required>
-        <input type="email" name="email" placeholder="Your Email" required>
+        <input type="email" name="email" placeholder="Your email" required>
         <textarea name="message" placeholder="Message" required></textarea>
         <button type="submit"><i class="fas fa-paper-plane"></i> Send</button>
       </form>
-      <div class="contact-note">Or email directly: <a href="mailto:your.email@example.com">your.email@example.com</a></div>
+      <div class="contact-note">Or email directly: <a href="mailto:amrendra.pandey2522@gmail.com">your.email@example.com</a></div>
     </section>
   </main>
   <footer>
