--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <textarea name="message" placeholder="Message" required></textarea>
         <button type="submit"><i class="fas fa-paper-plane"></i> Send</button>
       </form>
-      <div class="contact-note">Or email directly: <a href="mailto:your.email@example.com">your.email@example.com</a></div>
+      <div class="contact-note">Or email directly: <a href="mailto:amrendra.pandey2522@gmail.com">amrendra.pandey2522@gmail.com</a></div>
     </section>
   </main>
   <footer>
