--- a/index.html
+++ b/index.html
@@ -141,16 +141,49 @@
     <section class="card certificates reveal">
       <h2><i class="fas fa-certificate"></i> Certifications</h2>
       <ul>
+        <!-- Microsoft Learn -->
         <li>
-          <a href="https://www.coursera.org/account/accomplishments/verify/123456" target="_blank">
-            <img src="https://images.credly.com/size/110x110/images/7b8dd4f3-3b3b-4cef-9f9e-4e2e5c3c8b8d/python.png" alt="Python Badge"> Python for Everybody (Coursera)
+          <a href="https://learn.microsoft.com/en-us/users/amrendrapandey-7980/" target="_blank">
+            <img src="https://learn.microsoft.com/favicon.ico" alt="Microsoft Learn" style="vertical-align:middle;width:28px;height:28px;border-radius:6px;">
+            Microsoft Learn Profile
           </a>
+          <ul>
+            <li>
+              <a href="https://learn.microsoft.com/en-us/users/amrendrapandey-7980/achievements/fundamental-azure-900/" target="_blank">
+                <img src="https://learn.microsoft.com/en-us/media/achievements/azure-fundamentals-badge.svg" alt="Azure Fundamentals" style="width:24px;height:24px;vertical-align:middle;">
+                Microsoft Certified: Azure Fundamentals
+              </a>
+            </li>
+            <li>
+              <a href="https://learn.microsoft.com/en-us/users/amrendrapandey-7980/achievements/fundamental-ai-900/" target="_blank">
+                <img src="https://learn.microsoft.com/en-us/media/achievements/azure-ai-fundamentals-badge.svg" alt="Azure AI Fundamentals" style="width:24px;height:24px;vertical-align:middle;">
+                Microsoft Certified: Azure AI Fundamentals
+              </a>
+            </li>
+          </ul>
         </li>
+        <!-- Google Cloud Skills Boost -->
         <li>
-          <a href="https://www.credly.com/badges/your-badge" target="_blank">
-            <img src="https://images.credly.com/size/110x110/images/70e9d6b0-6c80-4e3c-b7c1-0124f8e6c90a/cloud.png" alt="Cloud Badge"> Cloud Fundamentals (Microsoft Learn)
+          <a href="https://www.cloudskillsboost.google/public_profiles/6c7c9f72-24f8-446a-bdc8-19498066a6bf" target="_blank">
+            <img src="https://www.gstatic.com/devrel-devsite/prod/v9f1c5b6e21e728f67d1e7e3d9b3ffb6e5a1e7c3e6d5df57c8e7eb2d6ffb6d6a9/cloud/images/favicons/onecloud/favicon.ico" alt="Google Cloud Skills Boost" style="vertical-align:middle;width:28px;height:28px;border-radius:6px;">
+            Google Cloud Skills Boost Profile
           </a>
+          <ul>
+            <li>
+              <a href="https://www.cloudskillsboost.google/public_profiles/6c7c9f72-24f8-446a-bdc8-19498066a6bf/badges/3736694" target="_blank">
+                <img src="https://cdn.qwiklabs.com/JYd3hS7G2VnSxvK7wBy9a3uQvX8QUs5eJ3kq4Uo0KQw%3D" alt="Cloud Essentials Badge" style="width:24px;height:24px;vertical-align:middle;">
+                Google Cloud Essentials
+              </a>
+            </li>
+            <li>
+              <a href="https://www.cloudskillsboost.google/public_profiles/6c7c9f72-24f8-446a-bdc8-19498066a6bf/badges/3736693" target="_blank">
+                <img src="https://cdn.qwiklabs.com/0c%2BnLZb0tAeq2p9G%2F2qGv1E1X4hQhN4uA1b9iN8bJ8I%3D" alt="Create and Manage Cloud Resources" style="width:24px;height:24px;vertical-align:middle;">
+                Create and Manage Cloud Resources
+              </a>
+            </li>
+          </ul>
         </li>
+        <!-- Add other certificates here as needed -->
       </ul>
     </section>
 
@@ -162,7 +195,7 @@
         <textarea name="message" placeholder="Message" required></textarea>
         <button type="submit"><i class="fas fa-paper-plane"></i> Send</button>
       </form>
-      <div class="contact-note">Or email directly: <a href="mailto:amrendra.pandey2522@gmail.com">amrendra.pandey2522@gmail.com</a></div>
+      <div class="contact-note">Or email directly: <a href="mailto:your.email@example.com">your.email@example.com</a></div>
     </section>
   </main>
   <footer>
